chore: make test use jvm preview features